--- a/envs/local.env
+++ b/envs/local.env
@@ -3,3 +3,6 @@ SERVER_DOMAIN=localhost
 SERVER_PORT=3000
 
 SERVER_URL=http://${SERVER_DOMAIN}:${SERVER_PORT}
+
+GOOGLE_CLIENT_ID=TEMP_ID
+GOOGLE_CLIENT_SECRET=TEMP_SECRET
