--- a/envs/dev.env
+++ b/envs/dev.env
@@ -1,1 +1,9 @@
 SERVICE_URL=http://dev.config-test.com
+SERVER_DOMAIN=localhost
+SERVER_PORT=3000
+
+SERVER_URL=http://${SERVER_DOMAIN}:${SERVER_PORT}
+
+GOOGLE_CLIENT_ID=TEMP_ID
+GOOGLE_CLIENT_SECRET=TEMP_SECRET
+GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google
